# adhs-working

./: .env.example  .env.sample  .gitignore  11.24Batch-temp.md  ADHS-ETL-INDEX.md  BD_PREFIX_MIGRATION_COMPLETE.md  BRANCH_INVENTORY.md  Batch-Up-Smart-Indexing.md  Batchdata_Template.xlsx  CONTINUE_FILE_NAMING_STANDARDIZATION.md  Ecorp_Template_Complete.xlsx  GSREALTY_CLIENT_ALIGNMENT.md  INVENTORY.md  PIPELINE_FLOW.md  PROMPT_FOR_NEW_SESSION.md  README.md  VALIDATION_RESULTS.md  analysis-records-dup.md  best-way-batch-plan.md  branching-strategy-conservative.md  check_fixes.py  ci.yml  claude.md  cleanuproot-jan21.md  consolidate-envs.md  dnu_Ecorp_Template_Complete.xlsx  env.example  field_map.TODO.yml  field_map.yml  last1percent-plan.md  no-name-address-only-batch-plan.md  pyproject.toml  rename-prev-convention-howto.md  sample_adhs_2025-05.xlsx  setup_env.py  setup_supabase_mcp.md  test_checkpoint_validation.py  test_ecorp_grouping.py  test_fixes.py  test_small.xlsx  (+8 more)
.claude/: settings.json
.corrupted_test_files/: 10.24_BatchData_Upload_11.15.12-57-52.xlsx  10.24_Ecorp_Complete_11.15.12-58-18.xlsx
APN/: apn_lookup.py  test_api_direct.py
Batchdata/: .env.sample  BATCHDATA_API_DOCUMENTATION.md  BD_PREFIX_MIGRATION.md  Batchdata_template_fields_desc.md  DIAGNOSTIC_REPORT_API_ISSUES.md  IMMEDIATE_FIX.md  PHASE_1_TEST_RESULTS.md  PIPELINE_INTEGRATION_GUIDE.md  PROMPT_FOR_NEXT_SESSION.md  README.md  SYNC_MIGRATION_IMPLEMENTATION.md  TEMPLATE_CONSOLIDATION_PLAN.md  V1_API_REFERENCE.md  V2_IMPLEMENTATION_PLAN.md  V2_QUICK_START.md  __init__.py  batchdata_docs_raw.json  check_upload_file.py  debug_api_directly.py  debug_api_errors.py  debug_complete_file.py  diagnose_state_issue.py  fix_state_transform.py  fix_v2_urls.py  quick_fix_use_async.py  template_config.xlsx  test_api_endpoint.csv  test_api_endpoint.py  test_v1_endpoints.py  test_v1_skiptrace.py  test_v1_verify.py  test_v2.csv  test_v2_async_with_state_fix.py  test_v2_csv_upload.py
Ecorp/: Ecorp_template_fields_desc.md  FIELD_MAPPING.md  README.md  agent_tracking_data.json  ecorp-captcha-analysis.md  professional_services_blacklist.py  statutory_agent_blacklist.txt  statutory_agent_whitelist_examples.txt
(+223 files in other folders)
