[tool.poetry]
name = "adhs-etl"
version = "0.1.0"
description = "ETL pipeline for ADHS provider rosters"
authors = ["Garrett Sullivan <gbsullivan@mac.com>"]
readme = "README.md"
packages = [{ include = "adhs_etl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1"
rapidfuzz = "^3.6"
typer = { extras = ["all"], version = "^0.12" }
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
psutil = "^5.9"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
ruff = "^0.4"
black = "^24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adhs-etl = "adhs_etl.cli:app"
