[tool.poetry]
name = "adhs-etl"
version = "0.1.0"
description = "ETL pipeline for ADHS provider rosters"
authors = ["Garrett Sullivan <gbsullivan@mac.com>"]
readme = "README.md"
packages = [{ include = "adhs_etl", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1"
rapidfuzz = "^3.6"
typer = { extras = ["all"], version = "^0.12" }
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
psutil = "^5.9"
pyyaml = "^6.0.2"
requests = "^2.32.5"
xlsxwriter = "^3.2"
# ETL pipeline dependencies
beautifulsoup4 = "^4.12"
selenium = "^4.15"
webdriver-manager = "^4.0"
numpy = "^1.26"
rich = "^13.7"
lxml = "^5.1"
# Optional - for enhanced address parsing
usaddress = { version = "^0.5", optional = true }
playwright = "^1.57.0"
pyfiglet = "^1.0.4"

[tool.poetry.extras]
address-parsing = ["usaddress"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
ruff = "^0.4"
black = "^24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adhs-etl = "adhs_etl.cli:app"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Ignore Batchdata directory - contains manual debug scripts, not pytest tests
norecursedirs = ["Batchdata", ".git", "__pycache__", "*.egg-info"]
